<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lw013_grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/lw013_blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableLeft="@drawable/lw013_ic_back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/lw013_white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/general_auxiliary_operation"
            android:textColor="@color/lw013_white_ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onSave"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/lw013_ic_save"
            android:visibility="gone" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/lw013_white_ffffff"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_downlink_for_pos"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:drawableRight="@drawable/lw013_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onDownlinkForPos"
                android:text="@string/downlink_for_position"
                android:textColor="@color/lw013_black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                style="@style/lw013_divider_line"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_downlink_for_pos" />

            <TextView
                android:id="@+id/tv_vibration_detection"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/lw013_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onVibrationDetection"
                android:text="@string/shock_detection"
                android:textColor="@color/lw013_black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_downlink_for_pos" />

            <View
                style="@style/lw013_divider_line"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_vibration_detection" />

            <TextView
                android:id="@+id/tv_man_down_detection"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/lw013_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onManDownDetection"
                android:text="@string/man_down_detection"
                android:textColor="@color/lw013_black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_vibration_detection" />

            <View
                style="@style/lw013_divider_line"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_man_down_detection" />

            <TextView
                android:id="@+id/tvAlarmFunction"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/lw013_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onAlarmFunction"
                android:text="@string/alarm_function"
                android:textColor="@color/lw013_black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_man_down_detection" />

            <View
                style="@style/lw013_divider_line"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAlarmFunction" />

            <TextView
                android:id="@+id/tvTempMonitor"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/lw013_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onTempMonitor"
                android:text="@string/temp_monitor_settings"
                android:textColor="@color/lw013_black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAlarmFunction" />

            <View
                style="@style/lw013_divider_line"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTempMonitor" />

            <TextView
                android:id="@+id/tvLightMonitor"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/lw013_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onLightMonitor"
                android:text="@string/light_monitor_settings"
                android:textColor="@color/lw013_black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTempMonitor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>