<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lw013_grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/lw013_blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableLeft="@drawable/lw013_ic_back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/lw013_white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/general_device_mode"
            android:textColor="@color/lw013_white_ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onSave"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/lw013_ic_save"
            android:visibility="gone" />

    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/lw013_white_ffffff"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Device Mode"
            android:textColor="@color/lw013_black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_device_mode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_device_mode" />

        <TextView
            android:id="@+id/tv_device_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lw013_shape_radius_blue_btn_bg"
            android:clickable="true"
            android:gravity="center"
            android:minWidth="70dp"
            android:onClick="selectDeviceMode"
            android:padding="12dp"
            android:text="Timing Mode"
            android:textColor="@color/lw013_white_ffffff"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            style="@style/lw013_divider_line"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_device_mode" />

        <TextView
            android:id="@+id/tv_standby_mode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:drawableRight="@drawable/lw013_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onStandbyMode"
            android:text="@string/standby_mode"
            android:textColor="@color/lw013_black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_device_mode" />

        <View
            style="@style/lw013_divider_line"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_standby_mode" />

        <TextView
            android:id="@+id/tv_timing_mode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:drawableRight="@drawable/lw013_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onTimingMode"
            android:text="@string/timing_mode"
            android:textColor="@color/lw013_black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_standby_mode" />

        <View
            style="@style/lw013_divider_line"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_timing_mode" />

        <TextView
            android:id="@+id/tv_periodic_mode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:drawableRight="@drawable/lw013_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onPeriodicMode"
            android:text="@string/periodic_mode"
            android:textColor="@color/lw013_black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_timing_mode" />

        <View
            style="@style/lw013_divider_line"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_periodic_mode" />

        <TextView
            android:id="@+id/tv_motion_mode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:drawableRight="@drawable/lw013_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onMotionMode"
            android:text="@string/motion_mode"
            android:textColor="@color/lw013_black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_periodic_mode" />

        <View
            style="@style/lw013_divider_line"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_motion_mode" />

        <TextView
            android:id="@+id/tv_timing_periodic_mode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:drawableRight="@drawable/lw013_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onTimingPeriodicMode"
            android:text="@string/timing_segmented_mode"
            android:textColor="@color/lw013_black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_motion_mode" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>